--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.7.1"
   },
   "keywords": [],
