--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-nextjs": "^0.5.9",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.7.1"
+    "@supabase/supabase-js": "^2.43.5"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT-0"
+  "license": "MIT-0",
+  "devDependencies": {
+    "spago": "^0.93.32"
+  }
 }
